--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html lang="en">
+<html lang="pt-pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tarefas</title>
     <frameset cols="20%,*">
         <frame src="./assets/pages/menu.html" name="menu"   noresize frameborder="0" scrolling="no"/>
         <frame src="./assets/pages/início.html" name="inicio" frameborder="0" />
