--- a/assets/pages/sobre-mim.html
+++ b/assets/pages/sobre-mim.html
@@ -45,7 +45,7 @@
         </h1>
     <div class="section">
         <p>
-            Olá, me chamo <strong>José Capewa!</strong> Tendo 16 anos e estou a estudar linguagens de programação, juntamente das linguagens de marcação de texto. 
+            Olá, me chamo <strong>José Capewa!</strong> Tendo 16 anos e estou a estudar linguagens de programação, juntamente das linguagens de marcação de texto.<p> 
             (Provavelmente será editado daqui a um tempo) Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut laudantium quia minus nulla assumenda maxime porro nesciunt quae minima, accusantium ullam doloribus dignissimos nemo deleniti suscipit ipsum eos, tempora alias!
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque temporibus ratione ipsum iste non similique eligendi quo iusto dolorem. Eligendi nemo quis, quae quod quo itaque voluptatem numquam minus nobis.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam quam hic, velit dolor nobis, aliquam dicta inventore error modi, architecto vero id esse animi a perferendis maxime quas? Placeat, iure!
