--- a/assets/pages/sobre-mim.html
+++ b/assets/pages/sobre-mim.html
@@ -26,12 +26,12 @@
                         </a>
                     </p>
                     <p>
-                        <a href="www.facebook.com/jose.capewa.3">
+                        <a href="www.facebook.com/jose.capewa.3" target="_blank">
                             Facebook
                         </a>
                     </p>
                     <p>
-                        <a href="www.instagram.com/capewajsoe56">
+                        <a href="www.instagram.com/capewajsoe56" target="_blank">
                             Instagram
                         </a>
                     </p>
