--- a/assets/pages/sobre-mim.html
+++ b/assets/pages/sobre-mim.html
@@ -21,6 +21,7 @@
                         Contact me
                     </summary>
                     <p>
+                        <address>
                         <a href="mailto:capewajose@gmail.com" target="_blank">
                             Email
                         </a>
@@ -35,6 +36,7 @@
                             Instagram
                         </a>
                     </p>
+                    </address>
                 </details>
             </h4>            
         </div>
